--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>ShortUrl in Backbone</title>
+  <link href="/Content/bootstrap.min.css" rel="stylesheet" />
   <script src="/Content/Scripts/jquery-1.7.2.min.js"></script>
   <script src="/Content/Scripts/underscore.min.js"></script>
   <script src="/Content/Scripts/backbone.min.js"></script>
@@ -15,12 +16,12 @@
   </script>
 </head>
   <body>
-    <div class="row">
-      <div id="mainForm" class="span12" />
-    </div>
+    <div class="container">
+      <h1>URL shortener</h1>
+      <div id="mainForm" class="span12"></div>
 
-    <div class="row">
-      <div id="listOfShortenedUrls"></div>
+      <h2 class="">All shortened URLs</h2>
+      <div id="listOfShortenedUrls" class="span12"/>
     </div>
   </body>
 </html>
