--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -6,9 +6,22 @@
   <script src="/Content/Scripts/jquery-1.7.2.min.js"></script>
   <script src="/Content/Scripts/underscore.min.js"></script>
   <script src="/Content/Scripts/backbone.min.js"></script>
+
   <script src="/Content/Scripts/ShortUrl/index.js"></script>
   <script src="/Content/Scripts/ShortUrl/mainForm.js"></script>
   <script src="/Content/Scripts/ShortUrl/urlList.js"></script>
+  
+  <script id="mainFormTemplate" type="text/underscore">
+    <div class="input-append">
+      <input type="text" value="Long URL" class="span4" />
+      <button class="btn">Shorten!</button>
+     </div>
+  </script>
+
+  <script id="urlListItemTemplate" type="text/underscore">
+    <td><%=shortUrl%></td><td> -> </td><td><%=longUrl%></td>
+  </script>
+
   <script>
     $(function () {
       ShortUrl.init();
@@ -20,7 +33,7 @@
       <h1>URL shortener</h1>
       <div id="mainForm" class="span12"></div>
 
-      <h2 class="">All shortened URLs</h2>
+      <h2>All shortened URLs</h2>
       <div id="listOfShortenedUrls" class="span12"/>
     </div>
   </body>
