Prepare to allow shortened urls to be opened via the list view

--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -19,7 +19,9 @@
   </script>
 
   <script id="urlListItemTemplate" type="text/underscore">
-    <td><%=shortUrl%></td><td> -> </td><td><%=longUrl%></td>
+    <td><%=shortUrl%></td>
+    <td><%=longUrl%></td>
+    <td><button class="btn-info">Go there!</button></td>
   </script>
 
   <script>
