Use value in input field as long url when adding new items to collection

--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -13,7 +13,7 @@
   
   <script id="mainFormTemplate" type="text/underscore">
     <div class="input-append">
-      <input type="text" value="Long URL" class="span4" />
+      <input id="longUrlTextInput" type="text" placeholder="Long URL" class="span4" />
       <button class="btn">Shorten!</button>
      </div>
   </script>
