Open the right  long url on clicking the "go there" button

--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -6,6 +6,7 @@
   <script src="/Content/Scripts/jquery-1.7.2.min.js"></script>
   <script src="/Content/Scripts/underscore.min.js"></script>
   <script src="/Content/Scripts/backbone.min.js"></script>
+  <script src="/Content/Scripts/URI.js"></script>
 
   <script src="/Content/Scripts/ShortUrl/index.js"></script>
   <script src="/Content/Scripts/ShortUrl/mainForm.js"></script>
