Add remove button to list, and only add item with long urls

--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -23,6 +23,7 @@
     <td><%=shortUrl%></td>
     <td><%=longUrl%></td>
     <td><button class="btn-info">Go there!</button></td>
+    <td><button class="btn-danger">Delete</button></td>
   </script>
 
   <script>
