left align header area with other elements

--- a/ShortUrlInBackbone/Views/Index.html
+++ b/ShortUrlInBackbone/Views/Index.html
@@ -35,9 +35,8 @@
 </head>
   <body>
     <div class="container">
-      <div class="hero-unit">
+      <div class="hero-unit span12">
         <h1>URL shortener</h1>
-
       </div>
       <div id="mainForm" class="span12"></div>
       <div id="listOfShortenedUrls" class="span12"></div>
