--- a/ShortUrlInBackbone/Views/Jasmine/SpecRunner.html
+++ b/ShortUrlInBackbone/Views/Jasmine/SpecRunner.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" type="text/css" href="/Content/jasmine/jasmine.css">
   <script type="text/javascript" src="/Content/Scripts/jasmine/jasmine.js"></script>
   <script type="text/javascript" src="/Content/Scripts/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/sinon/sinon-1.6.0.js"></script>
   
-  <script src="/Content/Scripts/jquery-1.7.2.min.js"></script>
-  <script src="/Content/Scripts/underscore.min.js"></script>
-  <script src="/Content/Scripts/backbone.min.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/underscore.min.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/backbone.min.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="/Content/Scripts/ShortUrl/index.js"></script>
