added simple ordering funcitonality to the list of urls

--- a/ShortUrlInBackbone/Views/Jasmine/SpecRunner.html
+++ b/ShortUrlInBackbone/Views/Jasmine/SpecRunner.html
@@ -20,6 +20,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="/Content/Scripts/ShortUrlSpecs/urlModelIntegrationSpec.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/ShortUrlSpecs/urlModelCollectionSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
