--- a/ShortUrlInBackbone/Views/Jasmine/SpecRunner.html
+++ b/ShortUrlInBackbone/Views/Jasmine/SpecRunner.html
@@ -17,10 +17,12 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="/Content/Scripts/ShortUrl/index.js"></script>
   <script type="text/javascript" src="/Content/Scripts/ShortUrl/urlListModel.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/ShortUrl/mainForm.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="/Content/Scripts/ShortUrlSpecs/urlModelIntegrationSpec.js"></script>
   <script type="text/javascript" src="/Content/Scripts/ShortUrlSpecs/urlModelCollectionSpec.js"></script>
+  <script type="text/javascript" src="/Content/Scripts/ShortUrlSpecs/mainFormSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
